<resources>
    <string name="app_name">Letters</string>
    <string name="app_preferences">Launcher Prefs</string>

    <string name="tap_clock">Clock</string>
    <string name="right_side">on Right</string>
    <string name="left_side">on Left</string>
    <string name="select_gesture">select gesture</string>

    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>

    <string name="tap_add">Add to</string>
    <string name="tap_remove">Remove from</string>
    <string name="unassigned"> (unassigned) </string>

    <string name="settings">Settings</string>
    <string name="color_scheme">Background Color</string>
    <string name="change_columns">Drawer Columns</string>
    <string name="drawer_textsize">Drawer Text Size</string>
    <string name="custom_filter">Filter Labels</string>
    <string name="enable_filter">Filter bar</string>
    <string name="custom_keypad">Keypad Height</string>
    <string name="custom_clock">Clock Visibility</string>
    <string name="handedness">Landscape handedness</string>
    <string name="set_wallpaper">Wallpaper</string>

    <string name="dark_scheme">Dark Scheme</string>
    <string name="light_scheme">Light Scheme</string>

    <string name="dark_1">Dark 1</string>
    <string name="dark_2">Dark 2</string>
    <string name="dark_3">Dark 3</string>
    <string name="dark_4">Dark 4</string>
    <string name="dark_5">Dark 5</string>
    <string name="dark_6">Dark 6</string>
    <string name="dark_7">Dark 7</string>

    <string name="light_1">Light 1</string>
    <string name="light_2">Light 2</string>
    <string name="light_3">Light 3</string>
    <string name="light_4">Light 4</string>
    <string name="light_5">Light 5</string>
    <string name="light_6">Light 6</string>
    <string name="light_7">Light 7</string>

    <string name="sample_clock">Sample Clock Display</string>
    <string name="clock_invisible">invisible</string>
    <string name="clock_transparent">transparent</string>
    <string name="clock_minimum">minimum</string>
    <string name="clock_middle">middle ground</string>
    <string name="clock_maximum">maximum</string>

    <string name="lefthanded">Left handed</string>
    <string name="righthanded">Right handed</string>
    <string name="keyboardhere">Keyboard here in landscape</string>

    <string name="statusbar">statusbar</string>

    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>

    <string name="sample_height">Sample Keyboard Height</string>
    <string name="small">small</string>
    <string name="medium">medium</string>
    <string name="large">large</string>
    <string name="extralarge">extra large</string>

    <string name="fifteen">fifteen</string>
    <string name="seventeen">seventeen</string>
    <string name="nineteen">nineteen</string>
    <string name="twentyone">twenty one</string>
    <string name="twentythree">twenty three</string>
    <string name="twentyfive">twenty five</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_system_settings">System Settings</string>
    <string name="action_launcher_settings">Launcher Settings</string>
    <string name="action_wallpaper">Change Wallpaper</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>

    <string name="apps">Apps</string>
    <string name="sound">Sound</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="display">Display</string>
    <string name="security">Security</string>
    <string name="storage">Storage</string>
    <string name="system">-Main-</string>
    <string name="wifi">Wifi</string>
    <string name="wireless">Wireless</string>


    <string name="enable">enable</string>
    <string name="disable">disable</string>

    <string name="enabled">ENABLED</string>
    <string name="disabled">DISABLED</string>

    <string name="letter_Q">Q</string>
    <string name="letter_W">W</string>
    <string name="letter_E">E</string>
    <string name="letter_R">R</string>
    <string name="letter_T">T</string>
    <string name="letter_Y">Y</string>
    <string name="letter_U">U</string>
    <string name="letter_I">I</string>
    <string name="letter_O">O</string>
    <string name="letter_P">P</string>

    <string name="letter_A">A</string>
    <string name="letter_S">S</string>
    <string name="letter_D">D</string>
    <string name="letter_F">F</string>
    <string name="letter_G">G</string>
    <string name="letter_H">H</string>
    <string name="letter_J">J</string>
    <string name="letter_K">K</string>
    <string name="letter_L">L</string>

    <string name="letter_Z">Z</string>
    <string name="letter_X">X</string>
    <string name="letter_C">C</string>
    <string name="letter_V">V</string>
    <string name="letter_B">B</string>
    <string name="letter_N">N</string>
    <string name="letter_M">M</string>

    <string name="letter_1">1</string>
    <string name="letter_2">2</string>
    <string name="letter_3">3</string>
    <string name="letter_4">4</string>
    <string name="letter_5">5</string>
    <string name="letter_6">6</string>
    <string name="letter_7">7</string>
    <string name="letter_8">8</string>
    <string name="letter_9">9</string>
    <string name="letter_0">0</string>
    <string name="key_delete">&#8855;</string>
    <string name="key_menu">&#8801;</string>

</resources>
