<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/keypad"
    android:background="#ff4c2cc0"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keypadtoprow"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/keyQ"
            android:text="@string/letter_Q"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyW"
            android:text="@string/letter_W"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyE"
            android:text="@string/letter_E"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyR"
            android:text="@string/letter_R"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyT"
            android:text="@string/letter_T"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyY"
            android:text="@string/letter_Y"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyU"
            android:text="@string/letter_U"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyI"
            android:text="@string/letter_I"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyO"
            android:text="@string/letter_O"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyP"
            android:text="@string/letter_P"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keypadmidrow"
        android:layout_gravity="center_horizontal">


        <Button
            android:layout_marginLeft="@dimen/keypad_margin"
            android:id="@+id/keyA"
            android:text="@string/letter_A"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyS"
            android:text="@string/letter_S"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyD"
            android:text="@string/letter_D"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyF"
            android:text="@string/letter_F"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyG"
            android:text="@string/letter_G"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyH"
            android:text="@string/letter_H"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyJ"
            android:text="@string/letter_J"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyK"
            android:text="@string/letter_K"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:layout_marginRight="@dimen/keypad_margin"
            android:id="@+id/keyL"
            android:text="@string/letter_L"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keypadbottomrow"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_marginRight="@dimen/keypad_margin"
            android:id="@+id/keyMenu"
            android:text="@string/key_menu"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadDel" />
        <Button
            android:id="@+id/keyZ"
            android:text="@string/letter_Z"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyX"
            android:text="@string/letter_X"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyC"
            android:text="@string/letter_C"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyV"
            android:text="@string/letter_V"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyB"
            android:text="@string/letter_B"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyN"
            android:text="@string/letter_N"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/keyM"
            android:text="@string/letter_M"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:layout_marginLeft="@dimen/keypad_margin"
            android:id="@+id/keyDelete"
            android:text="@string/key_delete"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadDel" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keypadnumrow"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/key1"
            android:text="@string/letter_1"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key2"
            android:text="@string/letter_2"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key3"
            android:text="@string/letter_3"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key4"
            android:text="@string/letter_4"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key5"
            android:text="@string/letter_5"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key6"
            android:text="@string/letter_6"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key7"
            android:text="@string/letter_7"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key8"
            android:text="@string/letter_8"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key9"
            android:text="@string/letter_9"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
        <Button
            android:id="@+id/key0"
            android:text="@string/letter_0"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="@dimen/keypad_key_height"
            style="@style/keypadText" />
    </LinearLayout>


</LinearLayout>